1146
The example doesn't compile anymore in 2.9 trunk:

{code}
<console>:18: error: overriding type T in trait A with bounds >: Nothing <: AnyRef{type S[-U]};
 type T has incompatible type
        type T = { type S[U] = U }
             ^
{code}
Maybe this was fixed?
